@@ -1,5 +1,10 @@
 2007-08-28  Marcus Brinkmann  <marcus@g10code.de>
 
+	* main.cc (DllMain): Change return type to "STADPI" to get an
+	extern "C" declaration.
+	(_gpgex_debug): Remove lazy initialization cruft.  DllMain is
+	called now, and initialization works properly.
+
 	* Makefile.am (gpgex_LDADD): Add -lole32.
 	* gpgex.def: Rename functions to not carry the @NR thingie.
 	* main.h: Many TRACE macros added.
